# agent-memory

./: .gitignore  README.md  USAGE.md  index.js  openclaw.plugin.json  package.json  pyproject.toml
agent_memory/: __init__.py  adapters.py  cache.py  cli.py  decision.py  embedding.py  hot.py  memory.py  normalizer.py  plugin.py  proxy.py  retrieval.py  store.py  sync.py  types.py
tests/: test_cache.py  test_decision.py  test_hot.py  test_integration.py  test_memory.py  test_normalizer.py  test_phase4.py  test_retrieval.py  test_store.py
